--- a/project-client/package.json
+++ b/project-client/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "babel-preset-react-app": "^10.0.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
